<resources>
    <string name="app_name">kaladiom</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_register">login/Register</string>
    <string name="categories">Categories</string>
    <string name="offers_discount">Best Offers</string>
    <string name="sides">Side Details</string>
    <string name="mens">Mens Clothes</string>
    <string name="womens">Womens Clothes</string>
    <string name="childs">Baby Clothes</string>
    <string name="sport">Sport</string>
    <string name="most_value">Most Valueable Products</string>
    <string name="discount">Best Offers</string>
    <string name="contactUs">Contact Us</string>
    <string name="about_us">About kaladiom</string>
    <string name="about_designer">About Application Developer</string>
    <string name="help">Application Guide</string>
    <string name="new_product">New Product</string>
    <string name="brands">Brands</string>
    <string name="btn_more">Show More</string>
    <string name="btn_list">Products List</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="search">search</string>
    <string name="taptoexit">Tap To Exit Again</string>
    <string name="activity_all_product">Products List</string>
    <string name="search_hint">Enter Your Own Product To Search</string>
    <string name="search_activity_title">search</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="home">Home</string>
    <string name="no_item_basket">Your Shopping Cart is Empty</string>
    <string name="delete_from_cart">Delete</string>
    <string name="cart_delete">Delete ?</string>
    <string name="cart_delete_msg">Are Your Sure You Want To Delete ?</string>
    <string name="cart_delete_yes">Yes</string>
    <string name="cart_delete_no">Cancel</string>
    <string name="cart_shop">Shopping Cart</string>
    <string name="cart_pay">Purchase</string>
    <string name="old_shopping">Last Purchases Details</string>
</resources>
